klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/modifier/DuplicateAssociationModifierErrorTest.klass
package dummy

association DummyAssociation
{
    parent: Dummy[0..1];
    children: Dummy[0..*] owned owned;

    relationship this.id == Dummy.id
}

class Dummy
{
    id: Long id key;
}
